infrastructure/app/scraper-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-service
  labels:
    app: scraper-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper-service
  template:
    metadata:
      labels:
        app: scraper-service
    spec:
      containers:
      - name: scraper-service
        image: usagre90/scraper-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
          requests:
            cpu: "0.5"
            memory: "300Mi"
