infrastructure/app/scraper-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper-service
spec:
  selector:
    app: scraper-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
  - protocol: TCP
    port: 9095
    targetPort: 8080
    name: metrics
