infrastructure/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scraper-ingress
spec:
  rules:
  - host: alex.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scraper-service
            port:
              number: 8080
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: scraper-service
            port:
              number: 9095
  ingressClassName: nginx
